# CppStandardLibraryModule

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: clang.yml  msvc.yml
cmake/: EnableStandardLibraryModule.cmake
